# libocct-wasm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  setup.ts
.github/workflows/: ci.yml  release.yml
scripts/: setup.sh
